--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -4,6 +4,7 @@
 
 body {
   margin: 0;
+  padding-top: 200px;
   background: lighten($color-dark, 75%);
   font-family: $font-text;
   font-size: 14px;
