--- a/src/sass/partials/_booking.scss
+++ b/src/sass/partials/_booking.scss
@@ -174,6 +174,11 @@
   
       }
     }
+
+    .selected {
+      border: 2px solid #FF6347; /* Change this to the color of your choice */
+      background-color: rgba(18, 151, 22, 0.1); /* Optional: Light background color */
+    }
   
     [data-table="1"] {
       left: 40px;
